<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.ActivityLogin"
    android:orientation="vertical"
  >
    <Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:title="Login"
        android:background="@color/purple_500"
        android:titleTextColor="@color/white"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="15dp">
        <EditText
            android:id="@+id/et_mob_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mob"
            android:inputType="number"
            android:maxLength="10"/>
        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"/>
        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"/>
        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="bottom">
            <TextView
                android:id="@+id/tv_signUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:gravity="center"
                android:textSize="20sp"/>
        </LinearLayout>
    </LinearLayout>
    </LinearLayout>